--- a/SmartShopMobileApp/SmartShopMobileApp.csproj
+++ b/SmartShopMobileApp/SmartShopMobileApp.csproj
@@ -76,4 +76,10 @@
 	  </PackageReference>
 	</ItemGroup>
 
+	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0-windows10.0.19041.0'">
+		<PackageReference Include="Camera.MAUI">
+			<Version>1.4.4</Version>
+		</PackageReference>
+	</ItemGroup>
+
 </Project>
