Added the navigation bar

--- a/SmartShopMobileApp/SmartShopMobileApp.csproj
+++ b/SmartShopMobileApp/SmartShopMobileApp.csproj
@@ -49,7 +49,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\AppIcon\Home.png" />
 	  <None Remove="Resources\Fonts\MaterialIcons-Regular.ttf" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiImage Include="Resources\AppIcon\home.png" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -74,6 +79,9 @@
 
 	<ItemGroup>
 	  <MauiXaml Update="Views\HomeView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Navigation.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\ScannedProductPopupView.xaml">
