--- a/SmartShopMobileApp/SmartShopMobileApp.csproj
+++ b/SmartShopMobileApp/SmartShopMobileApp.csproj
@@ -62,6 +62,8 @@
 	  <None Remove="Resources\Fonts\Poppins-BoldItalic.ttf" />
 	  <None Remove="Resources\Fonts\Poppins-Light.ttf" />
 	  <None Remove="Resources\Fonts\Poppins-Regular.ttf" />
+	  <None Remove="Resources\Images\card.png" />
+	  <None Remove="Resources\Images\card2.png" />
 	  <None Remove="Resources\Images\carrefour.png" />
 	  <None Remove="Resources\Images\kaufland.png" />
 	  <None Remove="Resources\Images\lidl.png" />
@@ -83,7 +85,9 @@
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  <PackageReference Include="Stripe.net" Version="43.4.0" />
 	  <PackageReference Include="Syncfusion.Maui.Calendar" Version="23.2.6" />
+	  <PackageReference Include="Syncfusion.Maui.ListView" Version="23.2.6" />
 	  <PackageReference Include="Syncfusion.Maui.Popup" Version="23.1.44" />
+	  <PackageReference Include="Syncfusion.Maui.TabView" Version="23.2.6" />
 	</ItemGroup>
 
 	<ItemGroup>
