Showed image when the shopping cart is empty

--- a/SmartShopMobileApp/SmartShopMobileApp.csproj
+++ b/SmartShopMobileApp/SmartShopMobileApp.csproj
@@ -63,9 +63,11 @@
 	  <None Remove="Resources\Fonts\Poppins-Light.ttf" />
 	  <None Remove="Resources\Fonts\Poppins-Regular.ttf" />
 	  <None Remove="Resources\Images\carrefour.png" />
+	  <None Remove="Resources\Images\cartempty.png" />
 	  <None Remove="Resources\Images\kaufland.png" />
 	  <None Remove="Resources\Images\lidl.png" />
 	  <None Remove="Resources\Images\payment.jpg" />
+	  <None Remove="Resources\Images\shopping_cart.jpg" />
 	</ItemGroup>
 
 	<ItemGroup>
