Added the Apply voucher button

--- a/SmartShopMobileApp/SmartShopMobileApp.csproj
+++ b/SmartShopMobileApp/SmartShopMobileApp.csproj
@@ -112,6 +112,9 @@
 	  <MauiXaml Update="Views\ShoppingCartView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\VoucherView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0-android'">
