Added the global current supermarket class

--- a/SmartShopMobileApp/SmartShopMobileApp.csproj
+++ b/SmartShopMobileApp/SmartShopMobileApp.csproj
@@ -62,6 +62,7 @@
 	  <None Remove="Resources\Fonts\Poppins-BoldItalic.ttf" />
 	  <None Remove="Resources\Fonts\Poppins-Light.ttf" />
 	  <None Remove="Resources\Fonts\Poppins-Regular.ttf" />
+	  <None Remove="Resources\Images\card.png" />
 	  <None Remove="Resources\Images\carrefour.png" />
 	  <None Remove="Resources\Images\cartempty.png" />
 	  <None Remove="Resources\Images\kaufland.png" />
