--- a/SmartShopMobileApp/SmartShopMobileApp.csproj
+++ b/SmartShopMobileApp/SmartShopMobileApp.csproj
@@ -88,6 +88,7 @@
 	  <PackageReference Include="Stripe.net" Version="43.4.0" />
 	  <PackageReference Include="Syncfusion.Maui.Calendar" Version="23.2.6" />
 	  <PackageReference Include="Syncfusion.Maui.Popup" Version="23.1.44" />
+	  <PackageReference Include="ZXing.Net.Maui" Version="0.4.0" />
 	  <PackageReference Include="ZXing.Net.Maui.Controls" Version="0.4.0" />
 	</ItemGroup>
 
@@ -102,6 +103,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Views\GeneratedQRCodeToExitShopView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\HistoryAndStatisticsView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
