--- a/SmartShopMobileApp/SmartShopMobileApp.csproj
+++ b/SmartShopMobileApp/SmartShopMobileApp.csproj
@@ -84,8 +84,10 @@
 	  <PackageReference Include="CommunityToolkit.Maui" Version="6.1.0" />
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 	  <PackageReference Include="Emgu.CV" Version="4.8.1.5350" />
+	  <PackageReference Include="Emgu.CV.runtime.windows" Version="4.8.1.5350" />
 	  <PackageReference Include="MailKit" Version="4.3.0" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	  <PackageReference Include="OpenCV" Version="2.4.11" />
 	  <PackageReference Include="Stripe.net" Version="43.4.0" />
 	  <PackageReference Include="Syncfusion.Maui.Calendar" Version="23.2.6" />
 	  <PackageReference Include="Syncfusion.Maui.Popup" Version="23.1.44" />
@@ -136,6 +138,9 @@
 	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0-android'">
 	  <PackageReference Include="Camera.MAUI">
 	    <Version>1.4.4</Version>
+	  </PackageReference>
+	  <PackageReference Include="Emgu.CV.runtime.maui.mini.android">
+	    <Version>4.8.1.5350</Version>
 	  </PackageReference>
 	</ItemGroup>
 
