--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "12345678910",
+    "Issuer": "smartshopmobileapp.com"
+  },
   "AllowedHosts": "*"
 }
