--- a/SmartShopMobileApp/Platforms/Android/AndroidManifest.xml
+++ b/SmartShopMobileApp/Platforms/Android/AndroidManifest.xml
@@ -5,7 +5,8 @@
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 	</application>-->
 	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true">
-		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDDJMMCLdE_DsnvFhpNBJwhj74xOb4K3u0" />
+		<!--<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDDJMMCLdE_DsnvFhpNBJwhj74xOb4K3u0" />-->
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDu2N_7-Ku9hrU5gfyfSCxY4pDudokljpQ"/>
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
