Implemented Log In and Log Out

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+    "ConnectionStrings": {
+      "SmartShopConnectionString": "Server=Patricia-Anelis\\SQLEXPRESS;Database=SmartShopDB;Trusted_Connection=True;Encrypt=True;TrustCertificate=true;"
+    },
+    "AllowedHosts": "*"
+ }
+
+
