--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Key": "@SomERandomStromgKey/(@bH6)-@-#-$",
+    "Issuer": "https://localhost:7157",
+    "ExpireIMinutes": 720
   }
 }
