--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,9 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "SmartShopConnectionString": "Server=smartshopserver.database.windows.net;Database=SmartShopDB;Trusted_Connection=True;Encrypt=True;TrustCertificate=true;"
-  },
+  //"ConnectionStrings": {
+  //  "SmartShopConnectionString": "Server=smartshopserver.database.windows.net;Database=SmartShopDB;Trusted_Connection=True;Encrypt=True;TrustCertificate=true;"
+  //},
     "AllowedHosts": "*"
  }
 
