--- a/SmartShopMobileApp/SmartShopMobileApp.csproj
+++ b/SmartShopMobileApp/SmartShopMobileApp.csproj
@@ -32,10 +32,10 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+		<MauiIcon Include="Resources\AppIcon\logo.png" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
+		<MauiSplashScreen Include="Resources\Splash\logo.png" Color="#6c943c" BaseSize="128,108" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
@@ -75,6 +75,7 @@
 	  <None Remove="Resources\Images\shoppingcart.jpg" />
 	  <None Remove="Resources\Images\syoss.jpg" />
 	  <None Remove="Resources\Images\zizin.jpg" />
+	  <None Remove="Resources\Splash\logo.png" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -85,6 +86,7 @@
 	  <MauiImage Include="Resources\AppIcon\scanner.png" />
 	  <MauiImage Include="Resources\AppIcon\transaction.png" />
 	  <MauiImage Include="Resources\AppIcon\trash.png" />
+	  <MauiImage Include="Resources\Splash\logo.png" />
 	</ItemGroup>
 
 	<ItemGroup>
